add header background

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -40,16 +40,18 @@
         <article id="main" role="main">
           <%= yield %>
           
-          <footer>
-            <p class="left">
-              &copy; 2011&nbsp;
-              <a href="http://awardwinningfjords.com">Thomas Reynolds</a>.
-            </p>
-            <p class="right"><%= link_to "Fork and edit this guide on Github", edit_guide_url %></p>
-          </footer>
         </article>
       </div>
     </div>
+    <footer id="footer">
+      <div class="inner">
+      <p class="copyright">
+        &copy; 2011&nbsp;
+        <a href="http://awardwinningfjords.com">Thomas Reynolds</a>.
+      </p>
+      <p class="link"><%= link_to "Fork and edit this guide on Github", edit_guide_url %></p>
+      </div>
+    </footer>
     
     <%= javascript_include_tag "highlight.pack" %>
     <%= stylesheet_link_tag "solarized_light" %>
