--- a/source/layouts/home.erb
+++ b/source/layouts/home.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <%= stylesheet_link_tag "site" %>
-    <%= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Questrial" %>
+    <%= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Questrial|Arvo" %>
     <title><%= page_title %></title>
   </head>
   <body>
