tweak nav style

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,7 +8,7 @@ layout: home.erb
 
 <div id="frame" class="container">
 
-<div class="tutorials">
+<nav id="documents">
   <% data.nav.each do |g| %>
     <div class="block">
       <h3><%= g.name %></h3>
@@ -20,6 +20,6 @@ layout: home.erb
       </ul>
     </div>
   <% end %>
-</div>
+</nav>
 
 </div>
