--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -70,7 +70,7 @@ body {
   font-family: 'Arvo', serif;
   
   b {
-    background-color: #002B36;
+    background-color: darken(#E3D6C0, 40%);
     padding: 15px 25px;
     color: #F1E7D6;
     border-radius:5px;
@@ -78,7 +78,7 @@ body {
     font-weight: normal;
     line-height: 1.2;
     word-spacing: 0.3em;
-    box-shadow: 0 0 4px 1px rgba(#fff, 0.7);
+    box-shadow: 0 0 4px 1px rgba(#fff, 0.7), 0 1px 4px 0 darken(#E3D6C0, 60%) inset;
   }
 }
   
@@ -115,33 +115,47 @@ aside {
       line-height: 30px;
       margin: 0; }
   }
-  nav {
-    ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      li {
-        font-size: 13px;
-        line-height: 1.3;
-        margin: 0 0 6px 0;
-        h6 {
-          margin-top: 1.5em;
-          margin-bottom: 0.75em;
-        }
-        a {
-          text-decoration: none; }
-        ul {
-          list-style-type: disc;
-          padding: 0 0 0 1.5em;
-        }
-      }
-    }
-  }
+
   footer {
     margin: 20px 0;
   }
 }
-    
+
+nav {
+
+  h3 {
+    margin: 1.5em 0 0.3em;
+    font-weight: bold;
+  }
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    li {
+      font-size: 15px;
+      line-height: 1.3;
+    padding: 6px 0 6px 12px;
+    border-left: 2px solid #E3D6C0;
+
+      &:hover {
+
+        border-left: 2px solid #002B36;
+
+      }
+
+      a {
+        text-decoration: none;
+        display: block;
+      }
+    }
+  }
+  p {
+    margin: 0 0 0.5em;
+    color: darken(#C8BCA9, 40%);
+  }
+}
+
 #main {
   @include column(15, true);
   float: right;
@@ -174,7 +188,7 @@ footer {
   font-size: 13px;
 }
 
-.tutorials {
+#documents {
   @include pie-clearfix;
   .block {
     @include column(8);
@@ -184,16 +198,5 @@ footer {
     &:nth-child(3n+1) {
       clear: left;
     }
-    h3 {
-      margin-bottom: 0.1em;
-      color: #002B36; 
-      font-weight: bold;
-    }
-    p {
-      margin-bottom: 0.5em;
-      color: darken(#C8BCA9, 40%);
-    }
-    ul {
-    }
-  }
+   }
 }
