--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -21,7 +21,7 @@ tt {
   
 body {
   text-rendering: optimizeLegibility;
-  background: #efe8d5;
+  background: #efe8d5 inline-image("main.bg.png");
   margin: 0; }
 
 #header {
