--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,6 +8,8 @@ layout: home.erb
 
 <div id="frame" class="container">
 
+<p class="intro">Middleman is a static site generator using all the shortcuts and tools in modern web development. <%= link_to 'Getting started', 'getting-started/welcome' %>.</p>
+
 <nav id="documents">
   <% data.nav.each do |g| %>
     <div class="block">
