--- a/source/layouts/home.erb
+++ b/source/layouts/home.erb
@@ -10,7 +10,7 @@
   <body>
     <header id="header">
       <h1><%= link_to "Middleman", "/", {class: 'logo'} %></h1>
-      <h2>makes developing stand-alone websites simple</h2>
+      <h2>makes developing websites simple</h2>
     </header>
 
         <section role="main">
