--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -5,6 +5,8 @@ title: "Sites Built Using Middleman"
 <h1>Sites Built Using Middleman</h1>
 
 <ul>
+  <li><a href="http://sidewalkland.com/" target="_blank">http://sidewalkland.com/</a></li>
+  <li><a href="http://hyperipsum.se/" target="_blank">http://hyperipsum.se/</a></li>
   <li><a href="http://pixelunion.net/" target="_blank">http://pixelunion.net/</a></li>
   <li><a href="http://syrinxoon.net/" target="_blank">http://syrinxoon.net/</a></li>
   <li><a href="http://nathanleray.me" target="_blank">http://nathanleray.me</a></li>
