--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,89 +1,29 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    <%= stylesheet_link_tag "site" %>
-    <title><%= page_title %></title>
-  </head>
-  <body>
-    <div id="frame">
-      <div class="container">
-        <aside>
-          <header>
-            <h1><%= link_to "Middleman", "/", {class: 'logo'} %></h1>
-            <h4>Hand-crafted frontend development</h4>
-          </header>
 
-          <nav>
-              <% data.nav.each do |g| %>
-                <div>
-                  <h3><%= g.name %></h3>
-                  <p><%= g.desc %></p>
-                  <ul>
-                    <% pages_for_group(g.name).each_with_index do |p, i| %>
-                      <li><%= link_to p.title, p.path %></li>
-                    <% end %>
-                  </ul>
-                </div>
-              <% end %>
-          </nav>
-          
-          <footer>
-            <a href="http://www.pledgie.com/campaigns/15807">
-              <img src="http://www.pledgie.com/campaigns/15807.png" alt="Click here to lend your support to Middleman">
-            </a>
-          </footer>
-        </aside>
-              
-        <article id="main" role="main">
-          <%= yield %>
-          
-        </article>
-      </div>
+<% wrap_layout :base do %>
+  <header id="header">
+    <div class="container">
+      <h1><%= link_to "Middleman", "/", {class: 'logo'} %></h1>
+      <p class="console">$ gem install middleman</p>
+     
     </div>
-    <footer id="footer">
-      <div class="inner">
-      <p class="copyright">
-        &copy; 2011&nbsp;
-        <a href="http://awardwinningfjords.com">Thomas Reynolds</a>.
-      </p>
-      <p class="link"><%= link_to "Fork and edit this guide on Github", edit_guide_url %></p>
-      </div>
-    </footer>
-    
-    <%= javascript_include_tag "highlight.pack" %>
-    <%= stylesheet_link_tag "solarized_light" %>
-    <script>hljs.initHighlightingOnLoad();</script>
-    
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="/javascripts/jquery-1.7.2.js"><\/script>')</script>
+  </header>
 
-    <%= javascript_include_tag "site" %>
-    <script>
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-90027-21']);
-      _gaq.push(['_trackPageview']);
-    
-      (function() {
-        var ga = document.createElement('script');
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        ga.setAttribute('async', 'true');
-        document.documentElement.firstChild.appendChild(ga);
-      })();
-    </script>
-    <script>
-      var _gauges = _gauges || [];
-      (function() {
-        var t   = document.createElement('script');
-        t.type  = 'text/javascript';
-        t.async = true;
-        t.id    = 'gauges-tracker';
-        t.setAttribute('data-site-id', '4ef39d56613f5d017b000004');
-        t.src = '//secure.gaug.es/track.js';
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(t, s);
-      })();
-    </script>
-  </body>
-</html>
+
+  <div class="container">
+    <nav id="tos">
+
+      <%= partial 'layouts/nav' %>
+      
+      <footer>
+        <a href="http://www.pledgie.com/campaigns/15807">
+          <img src="http://www.pledgie.com/campaigns/15807.png" alt="Click here to lend your support to Middleman">
+        </a>
+      </footer>
+          
+
+    </nav>
+    <article id="main" role="main">
+      <%= yield %>
+    </article>
+  </div>
+<% end %>
