--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,4 +1,14 @@
 @import "compass";
+@import "compass/reset";
+@import "blueprint";
+
+@import "icon";
+@import "base";
+@import "layout";
+@import "nav";
+@import "index";
+
+@import "solarized_light";
 
 $link-color: #002b36;
 $link-visited-color: $link-color;
@@ -9,204 +19,6 @@ $link-active-color:  $link-color;
 $blueprint-font-size: 14px;
 $blueprint-grid-columns: 24;
 
-@import "blueprint";
 @include blueprint-typography;
 
-tt {
-  font-size: .95em;
-  background: #F8F8F8;
-  @include border-radius(4px);
-  @include box-shadow(#A89A7A 0 1px 1px inset, white 0 1px 0);
-  padding: 2px 4px; }
   
-body {
-  text-rendering: optimizeLegibility;
-  background: #efe8d5 inline-image("main.bg.png");
-  margin: 0; }
-
-#header {
-  padding: 40px 0 40px;
-  border-bottom: 1px solid darken(#E1D7BE, 5%);
-  // box-shadow: 0 0 1px 1px rgba(#fff, 0.6) ;
-  background: #E1D7BE inline-image("header.bg.png") no-repeat center top;
-
-  h1 {
-    width: 225px;
-    margin: 0 auto 0;
-  }
-  h2 {
-    font-size: 36px;
-    font-family: 'Questrial', sans-serif;
-    text-shadow: 0 0 10px #fff;
-  }
-
-  text-align: center;
-}
-#footer {
-  background-color: #E1D7BE;
-  padding: 20px 0 20px;
-  margin-top: 30px;
-
-  p {
-    color: #9A7546;
-    margin: 0;
-  }
-  a {
-    color: #9A7546;
-    @include hover_link;
-
-  }
-
-  .inner {
-    @include container;
-  }
-
-  .copyright {
-    @include float-left; }
-  .link {
-    @include float-right; }
-}
-
-#install {
-  text-align: center;
-  margin: -15px 0 40px;
-  font-family: 'Arvo', serif;
-  
-  b {
-    background-color: darken(#E3D6C0, 40%);
-    padding: 15px 25px;
-    color: #F1E7D6;
-    border-radius:5px;
-    font-size: 24px;
-    font-weight: normal;
-    line-height: 1.2;
-    word-spacing: 0.3em;
-    box-shadow: 0 0 4px 1px rgba(#fff, 0.7), 0 1px 4px 0 darken(#E3D6C0, 60%) inset;
-  }
-}
-  
-#frame {
-  @include container; }
-
-.container {
-  @include pie-clearfix;
-  position: relative; }
-
-.logo {
-  display: block;
-  @include hide-text;
-  width: image-width("mm-blue-w-text.png");
-  height: image-height("mm-blue-w-text.png");
-  background: inline-image("mm-blue-w-text.png") no-repeat;
-  @include border-radius(4px);
-}
-
-aside {
-  width: 225px;
-  float: left;
-  display: inline;
-  top: 0;
-  header {
-    margin-bottom: 10px;
-    h1 {
-      margin: 20px 0 0 0;
-    }
-    h4 {
-      display: none;
-      text-align: center;
-      font-size: 13px;
-      line-height: 30px;
-      margin: 0; }
-  }
-
-  footer {
-    margin: 20px 0;
-  }
-}
-
-nav {
-
-  h3 {
-    margin: 1.5em 0 0.3em;
-    font-weight: bold;
-  }
-
-  ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    li {
-      font-size: 15px;
-      line-height: 1.3;
-    padding: 6px 0 6px 12px;
-    border-left: 2px solid #E3D6C0;
-
-      &:hover {
-
-        border-left: 2px solid #002B36;
-
-      }
-
-      a {
-        text-decoration: none;
-        display: block;
-      }
-    }
-  }
-  p {
-    margin: 0 0 0.5em;
-    color: darken(#C8BCA9, 40%);
-  }
-}
-
-#main {
-  @include column(15, true);
-  float: right;
-  h1:first-child {
-    margin-top: 14px; }
-  pre {
-    background: #F8F8F8;
-    @include box-shadow(darken(#c6bda8, 15) 0 1px 1px inset, white 0 1px 0);
-    padding: 0.5em 1em;
-    margin: 1.5em 0;
-    overflow: auto;
-    @include border-radius(4px); }
-  footer {
-    border-top: 1px solid #c6bda8;
-    background: #c6bda8;
-    padding: 1em 10px;
-    @include clearfix;
-    p {
-      margin: 0;
-      &.left {
-        @include float-left; }
-      &.right {
-        @include float-right; }
-    }
-  }
-}
-
-footer {
-  font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
-  font-size: 13px;
-}
-
-.intro {
-  color: #957642;
-  font-size: 15px;
-  margin: 10px auto;
-  text-align: center;
-}
-
-#documents {
-  @include pie-clearfix;
-  .block {
-    @include column(8);
-    &:nth-child(3n) {
-      margin-right: 0;
-    }
-    &:nth-child(3n+1) {
-      clear: left;
-    }
-   }
-}
