--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,5 @@
 ---
-layout: base
+layout: layout
 ---
 
 <header id="hero">
@@ -13,7 +13,6 @@ layout: base
   </div>
 
   <div class="container">
-
     <p class="intro">Middleman is a static site generator using all the shortcuts and tools in modern web development. <%= link_to 'Getting started', 'getting-started/welcome' %>.</p>
     <p class="intro sns">
       <span><i class="icon-github"> <%= link_to 'Watch', 'http://github.com/middleman/middleman' %></i></span>
@@ -23,6 +22,5 @@ layout: base
     <nav class="grid">
       <%= partial 'layouts/nav' %>
     </nav>
-
   </div>  
 </section>
