--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,7 +3,7 @@ layout: layout
 ---
 
 <header id="hero">
-  <h1><%= link_to "Middleman", "/", {class: 'logo'} %></h1>
+  <h1><%= link_to image_tag("mm-blue-w-text.svg", :width => 225, :height => 225, :alt => "Middleman"), "/", { :class => 'logo' } %></h1>
   <h2>makes developing websites simple</h2>
 </header>
 
