--- a/source/community/3rd-party-project-templates.html.erb
+++ b/source/community/3rd-party-project-templates.html.erb
@@ -12,5 +12,5 @@ title: "Community Project Templates"
 </ul>
 
 <footer>
-  <%= link_to "Fork and add your extension on Github", "https://github.com/middleman/middleman-guides/" %>
+  <%= link_to "Fork and add your extension on Github", "https://github.com/middleman/middleman-guides/blob/master/source/community/3rd-party-project-templates.html.erb" %>
 </footer>
