--- a/source/community/3rd-party-project-templates.html.erb
+++ b/source/community/3rd-party-project-templates.html.erb
@@ -6,8 +6,12 @@ title: "Community Project Templates"
 
 <ul>
   <li>
-    <a href="https://github.com/dannyprose/Middleman-HTML5BP-HAML">HTML5 Boilerplate (HAML)</a>
+    <a href="https://github.com/dannyprose/Middleman-HTML5BP-HAML">HTML5 Boilerplate (HAML) and Sprockets</a>
     &mdash; HTML5 Boilerplate 3.0 converted to HAML. <a href="http://susy.oddbird.net/">Susy</a> ready.
+  </li>
+  <li>
+    <a href="https://github.com/nsteiner/middleman-smacss">Middleman-SMACSS</a>
+    &mdash; SMACSS type starter template for Middleman
   </li>
 </ul>
 
