--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -29,6 +29,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://sleede.com/" target="_blank">http://sleede.com/</a></li>
   <li><a href="http://www.cyclocane.com" target="_blank">http://www.cyclocane.com</a></li>
   <li><a href="http://merchantos.com" target="_blank">http://merchantos.com</a></li>
+  <li><a href="http://karlfreeman.co.uk" target="_blank">http://karlfreeman.co.uk</a></li>
 </ul>
 
 <h1>Blogs Using Middleman</h1>
