Added some Metalab sites

--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -30,6 +30,9 @@ title: "Sites Built Using Middleman"
   <li><a href="http://www.cyclocane.com" target="_blank">http://www.cyclocane.com</a></li>
   <li><a href="http://merchantos.com" target="_blank">http://merchantos.com</a></li>
   <li><a href="http://karlfreeman.co.uk" target="_blank">http://karlfreeman.co.uk</a></li>
+  <li><a href="http://metalabdesign.com" target="_blank">http://metalabdesign.com</a></li>
+  <li><a href="http://getflow.com" target="_blank">http://getflow.com</a></li>
+  <li><a href="http://alibosworth.com" target="_blank">http://alibosworth.com</a></li>
 </ul>
 
 <h1>Blogs Using Middleman</h1>
