Add 2012.eurucamp.org, jrubyconf.eu to site list

--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -33,6 +33,8 @@ title: "Sites Built Using Middleman"
   <li><a href="http://metalabdesign.com" target="_blank">http://metalabdesign.com</a></li>
   <li><a href="http://getflow.com" target="_blank">http://getflow.com</a></li>
   <li><a href="http://alibosworth.com" target="_blank">http://alibosworth.com</a></li>
+  <li><a href="http://2012.eurucamp.org" target="_blank">http://2012.eurucamp.org</a></li>
+  <li><a href="http://jrubyconf.eu" target="_blank">http://jrubyconf.eu</a></li>
 </ul>
 
 <h1>Blogs Using Middleman</h1>
