Add voormedia.com website.

--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -35,6 +35,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://alibosworth.com" target="_blank">http://alibosworth.com</a></li>
   <li><a href="http://2012.eurucamp.org" target="_blank">http://2012.eurucamp.org</a></li>
   <li><a href="http://jrubyconf.eu" target="_blank">http://jrubyconf.eu</a></li>
+  <li><a href="http://voormedia.com/" target="_blank">http://voormedia.com</a></li>
 </ul>
 
 <h1>Blogs Using Middleman</h1>
