--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -38,6 +38,11 @@ title: "Sites Built Using Middleman"
   <li><a href="http://voormedia.com/" target="_blank">http://voormedia.com</a></li>
 </ul>
 
+<h1>Mobile Apps Built Using Middleman</h1>
+<ul>
+  <li><a href="http://pollev.com/" target="_blank">http://pollev.com/</a></li>
+</ul>
+
 <h1>Blogs Using Middleman</h1>
 
 <ul>
