squashed project template changes to include default project templates

--- a/source/community/3rd-party-project-templates.html.erb
+++ b/source/community/3rd-party-project-templates.html.erb
@@ -6,7 +6,7 @@ title: "Community Project Templates"
 
 <ul>
   <li>
-    <a href="https://github.com/dannyprose/Middleman-HTML5BP-HAML">HTML5 Boilerplate (HAML) and Sprockets</a>
+    <a href="https://github.com/dannyprose/Middleman-HTML5BP-HAML">HTML5 Boilerplate: HAML & SCSS</a>
     &mdash; HTML5 Boilerplate 3.0 converted to HAML. <a href="http://susy.oddbird.net/">Susy</a> ready.
   </li>
   <li>
