--- a/source/community/3rd-party-project-templates.html.erb
+++ b/source/community/3rd-party-project-templates.html.erb
@@ -11,7 +11,11 @@ title: "Community Project Templates"
   </li>
   <li>
     <a href="https://github.com/nsteiner/middleman-smacss">Middleman-SMACSS</a>
-    &mdash; SMACSS type starter template for Middleman
+    &mdash; SMACSS type starter template for Middleman.
+  </li>
+  <li>
+  	<a href="https://github.com/BryanSchuetz/middleman-frameless">Middleman-Frameless</a>
+  	&mdash; Basic project template with adaptive SASS grid from <a href="http://framelessgrid.com/">Frameless</a>.
   </li>
 </ul>
 
