add middleman-sync to list of community extensions

--- a/source/community/3rd-party-extensions.html.erb
+++ b/source/community/3rd-party-extensions.html.erb
@@ -21,6 +21,10 @@ title: "Community Extensions"
     <a href="https://github.com/xunker/middleman-target">middleman-target</a>
     &mdash; Create and build source for separate build targets.
   </li>
+  <li>
+    <a href="https://github.com/karlfreeman/middleman-sync">middleman-sync</a>
+    &mdash; Synchronizes assets between Middleman and S3.
+  </li>
 </ul>
 
 <footer>
