--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -36,6 +36,8 @@ title: "Sites Built Using Middleman"
   <li><a href="http://2012.eurucamp.org" target="_blank">http://2012.eurucamp.org</a></li>
   <li><a href="http://jrubyconf.eu" target="_blank">http://jrubyconf.eu</a></li>
   <li><a href="http://voormedia.com/" target="_blank">http://voormedia.com</a></li>
+  <li><a href="http://hotelpostalongarone.it/" target="_blank">http://hotelpostalongarone.it</a></li>
+  <li><a href="http://happybeelab.com/" target="_blank">http://happybeelab.com</a></li>
 </ul>
 
 <h1>Mobile Apps Built Using Middleman</h1>
