Adds Chubbs to the list of 3rd party templates

--- a/source/community/3rd-party-project-templates.html.erb
+++ b/source/community/3rd-party-project-templates.html.erb
@@ -14,8 +14,12 @@ title: "Community Project Templates"
     &mdash; SMACSS type starter template for Middleman.
   </li>
   <li>
-  	<a href="https://github.com/BryanSchuetz/middleman-frameless">Middleman-Frameless</a>
+    <a href="https://github.com/BryanSchuetz/middleman-frameless">Middleman-Frameless</a>
   	&mdash; Basic project template with adaptive SASS grid from <a href="http://framelessgrid.com/">Frameless</a>.
+  </li>
+  <li>
+    <a href="https://github.com/theblacksmith/chubbs">CHUBBS!</a>
+  	&mdash; Middleman Compass Haml (Uhu!) Boilerplate Bootstrap Sass Template from <a href="http://http://svallory.github.com/">The Blacksmith</a>.
   </li>
 </ul>
 
