--- a/source/community/3rd-party-extensions.html.erb
+++ b/source/community/3rd-party-extensions.html.erb
@@ -25,6 +25,10 @@ title: "Community Extensions"
     <a href="https://github.com/karlfreeman/middleman-sync">middleman-sync</a>
     &mdash; Synchronizes assets between Middleman and S3.
   </li>
+  <li>
+    <a href="http://tvaughan.github.com/middleman-deploy/">middleman-deploy</a>
+    &mdash; Deploy a middleman built site over rsync.
+  </li>
 </ul>
 
 <footer>
