--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -38,6 +38,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://voormedia.com/" target="_blank">http://voormedia.com</a></li>
   <li><a href="http://hotelpostalongarone.it/" target="_blank">http://hotelpostalongarone.it</a></li>
   <li><a href="http://happybeelab.com/" target="_blank">http://happybeelab.com</a></li>
+  <li><a href="http://massgardinen.de/" target="_blank">http://massgardinen.de/</a></li>
 </ul>
 
 <h1>Mobile Apps Built Using Middleman</h1>
@@ -50,6 +51,7 @@ title: "Sites Built Using Middleman"
 <ul>
   <li><a href="http://awardwinningfjords.com/" target="_blank">http://awardwinningfjords.com/</a></li>
   <li><a href="http://blog.troutwine.us/" target="_blank">http://blog.troutwine.us/</a></li>
+  <li><a href="http://luebke-wohnen.de/" target="_blank">http://luebke-wohnen.de/</a></li>  
 </ul>
 
 <footer>
