Slight copy change and capitalization

--- a/source/community/3rd-party-extensions.html.erb
+++ b/source/community/3rd-party-extensions.html.erb
@@ -23,11 +23,11 @@ title: "Community Extensions"
   </li>
   <li>
     <a href="https://github.com/karlfreeman/middleman-sync">middleman-sync</a>
-    &mdash; Synchronizes assets between Middleman and S3.
+    &mdash; Synchronise your Middleman build to S3 and more.
   </li>
   <li>
     <a href="http://tvaughan.github.com/middleman-deploy/">middleman-deploy</a>
-    &mdash; Deploy a middleman built site over rsync.
+    &mdash; Deploy a Middleman built site over rsync.
   </li>
 </ul>
 
