Removes extra 'http://' from href

--- a/source/community/3rd-party-project-templates.html.erb
+++ b/source/community/3rd-party-project-templates.html.erb
@@ -19,7 +19,7 @@ title: "Community Project Templates"
   </li>
   <li>
     <a href="https://github.com/theblacksmith/chubbs">CHUBBS!</a>
-  	&mdash; Middleman Compass Haml (Uhu!) Boilerplate Bootstrap Sass Template from <a href="http://http://svallory.github.com/">The Blacksmith</a>.
+  	&mdash; Middleman Compass Haml (Uhu!) Boilerplate Bootstrap Sass Template from <a href="http://svallory.github.com/">The Blacksmith</a>.
   </li>
 </ul>
 
