--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -6,6 +6,7 @@ title: "Sites Built Using Middleman"
 
 <ul>
   <li><a href="http://sidewalkland.com/" target="_blank">http://sidewalkland.com/</a></li>
+  <li><a href="http://aktagon.com" target="_blank">http://aktagon.com</a></li>
   <li><a href="http://hyperipsum.se/" target="_blank">http://hyperipsum.se/</a></li>
   <li><a href="http://pixelunion.net/" target="_blank">http://pixelunion.net/</a></li>
   <li><a href="http://syrinxoon.net/" target="_blank">http://syrinxoon.net/</a></li>
