--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -41,6 +41,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://happybeelab.com/" target="_blank">http://happybeelab.com</a></li>
   <li><a href="http://massgardinen.de/" target="_blank">http://massgardinen.de/</a></li>
   <li><a href="http://thirteen23.com/" target="_blank">http://thirteen23.com</a></li>
+  <li><a href="http://hypervers.es/" target="_blank">http://hypervers.es</a></li>
 </ul>
 
 <h1>Mobile Apps Built Using Middleman</h1>
