--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -22,5 +22,7 @@ layout: layout
     <nav class="grid">
       <%= partial 'layouts/nav' %>
     </nav>
+
+    <%= partial "support" %>
   </div>  
 </section>
