--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,8 +8,20 @@
     <title><%= page_title %></title>
   </head>
   <body>
-    <%= yield %>
+    <!-- BuySellAds Ad Code -->
+    <script type="text/javascript">
+    (function(){
+      var bsa = document.createElement('script');
+         bsa.type = 'text/javascript';
+         bsa.async = true;
+         bsa.src = 'http://s3.buysellads.com/ac/bsa.js';
+      (document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(bsa);
+    })();
+    </script>
+    <!-- End BuySellAds Ad Code -->
 
+    <%= yield %>
+    
     <footer id="footer">
       <div class="container">
         <p class="copyright">
