--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -20,3 +20,22 @@ $blueprint-font-size: 14px;
 $blueprint-grid-columns: 24;
 
 @include blueprint-typography;
+
+body .one .bsa_it_ad { background: transparent; border: none; font-family: inherit; padding: 0 15px 0 10px; margin: 0; text-align: right; }
+body .one .bsa_it_ad:hover img { -moz-box-shadow: 0 0 3px #000; -webkit-box-shadow: 0 0 3px #000; box-shadow: 0 0 3px #000; }
+body .one .bsa_it_ad .bsa_it_i { display: block; padding: 0; float: none; margin: 0 0 5px; }
+body .one .bsa_it_ad .bsa_it_i img { padding: 0; border: none; }
+body .one .bsa_it_ad .bsa_it_t { padding: 6px 0; }
+body .one .bsa_it_ad .bsa_it_d { padding: 0; font-size: 12px; color: #333; }
+body .one .bsa_it_p { display: none; }
+body #bsap_aplink, body #bsap_aplink:hover { display: block; font-size: 10px; margin: 12px 15px 0; text-align: right; }
+
+#support {
+  position: absolute;
+  background: #E1D6C1;
+  border: 1px solid darken(#E1D6C1, 5%);
+  @include border-radius(3px);
+  top: 0;
+  right: -210px;
+  width: 170px; 
+  padding: 10px; }
