--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -44,6 +44,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://thirteen23.com/" target="_blank">http://thirteen23.com</a></li>
   <li><a href="http://hypervers.es/" target="_blank">http://hypervers.es</a></li>
   <li><a href="http://matthieu-keller.info/" target="_blank">http://matthieu-keller.info</a></li>
+  <li><a href="http://davesdings.co.uk/" target="_blank">http://davesdings.co.uk</a></li>
 </ul>
 
 <h1>Mobile Apps Built Using Middleman</h1>
