--- a/source/community/3rd-party-extensions.html.erb
+++ b/source/community/3rd-party-extensions.html.erb
@@ -33,6 +33,10 @@ title: "Community Extensions"
     <a href="https://github.com/middleman/middleman-livereload">middleman-livereload</a>
     &mdash; Automatically refresh the browser when Middleman files change.
   </li>
+  <li>
+    <a href="https://github.com/yeah/middleman-svg-fallback">middleman-svg-fallback</a>
+    &mdash; Generate nice JPEG and PNG files from any SVG files.
+  </li>
 </ul>
 
 <footer>
