--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -46,6 +46,8 @@ title: "Sites Built Using Middleman"
   <li><a href="http://matthieu-keller.info/" target="_blank">http://matthieu-keller.info</a></li>
   <li><a href="http://davesdings.co.uk/" target="_blank">http://davesdings.co.uk</a></li>
   <li><a href="http://hyfn.com/" target="_blank">http://hyfn.com</a></li>
+  <li><a href="http://www.heitzke.com/" target="_blank">http://www.heitzke.com</a></li>
+  <li><a href="http://www.incubatebang.com/" target="_blank">http://www.incubatebang.com</a></li>
 </ul>
 
 <h1>Mobile Apps Built Using Middleman</h1>
