makes the guides responsive, removes blueprint (will be removed in next update of compass) and adds susy for grids
whitespace, normalize stylesheet code style

remove blueprint, add susy, add variables, and replicate existing styles

blueprint is going to be removed in compass, and doesn't allow for
fluid/responsive/adaptive/w/e you want to call it layouts

borked newline

_layout => _articles, follow naming convention of _index

get support block in document flow

add the responsive sauce

add menu link, tweak styles

--- a/source/_support.erb
+++ b/source/_support.erb
@@ -1,7 +1,8 @@
 <div id="support">
-  <h4>Support This Project</h4>
-
-  <p><a href="https://spb.io/s/4dXbHBorC3" target="_blank">With a Donation</a></p>
+	<div class="donate">
+	  <h4>Support This Project</h4>
+	  <p><a href="https://spb.io/s/4dXbHBorC3" target="_blank">With a Donation</a></p>
+	</div>
 
   <!-- BuySellAds Zone Code -->
   <div id="bsap_1280677" class="bsarocks bsap_989fc05e297a314a92ad3f33cef85fd4"></div>
