--- a/source/layouts/_nav.erb
+++ b/source/layouts/_nav.erb
@@ -1,5 +1,5 @@
     <% data.nav.each do |g| %>
-      <div class="block">
+      <div class="toc-block">
         <h3><%= g.name %></h3>
         <p><%= g.desc %></p>
         <ul>
