--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+    <meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <%= stylesheet_link_tag "site" %>
     <%= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Questrial|Arvo" %>
     <title><%= page_title %></title>
