--- a/source/stylesheets/_index.scss
+++ b/source/stylesheets/_index.scss
@@ -1,68 +1,66 @@
 #hero {
-  padding: 50px 0 30px;
-  border-bottom: 1px solid darken(#E1D7BE, 5%);
-  background: #E1D7BE inline-image("header.bg.png") no-repeat center top;
-
+  padding: 50px 0 30px 0;
+  border-bottom: 1px solid darken($light-brown, 5%);
+  background: $light-brown inline-image("header.bg.png") no-repeat center top;
   h1 {
     width: 225px;
-    margin: 0 auto 0;
+    margin: 0 auto 0 auto;
   }
   h2 {
     font-size: 36px;
-    font-family: 'Questrial', sans-serif;
+    font-family: $display-font-family;
     text-shadow: 0 0 10px #fff;
-    margin: 30px 0 30px;
+    margin: 30px 0 30px 0;
   }
-
   text-align: center;
 }
 
 #install {
   text-align: center;
-  margin: -15px 0 40px;
-  
-  b {
-    background-color: darken(#E3D6C0, 40%);
-    padding: 15px 25px;
+  margin: -15px 0 40px 0;
+  p{
+    display: inline-block;
     color: #F1E7D6;
-    border-radius:5px;
+    @include border-radius( 5px );
+    padding: 15px 25px;
+    background-color: $mid-brown;
+    @include box-shadow( 0 0 4px 1px rgba(#fff, 0.7), 0 1px 4px 0 $dark-brown inset );
+  }
+  b {
     font-size: 24px;
-    box-shadow: 0 0 4px 1px rgba(#fff, 0.7), 0 1px 4px 0 darken(#E3D6C0, 60%) inset;
   }
 }
   
 .intro {
-  color: #957642;
+  color: $mid-brown;
   font-size: 15px;
   margin: 10px auto;
   text-align: center;
 }
+
 .sns {
   a {
     color: inherit;
-
-
+    @include hover_link;
     &:hover {
       color: inherit;
     }
-
-    @include hover_link;
   }
-
   span {
     margin: 0 10px;
   }
 }
 
+
 .grid {
+  @include span-columns(20);
   @include pie-clearfix;
-  .block {
-    @include column(8);
-    &:nth-child(3n) {
-      margin-right: 0;
-    }
+  .toc-block {
+    @include span-columns(4,12);
+    @include nth-omega(3n);
     &:nth-child(3n+1) {
       clear: left;
     }
-   }
+    padding: 1em 0;
+  }
 }
