--- a/source/stylesheets/_nav.scss
+++ b/source/stylesheets/_nav.scss
@@ -1,37 +1,27 @@
-nav {
-
+.toc-block {
   h3 {
-    margin: 1.5em 0 0.3em;
+    margin: 1.5em 0 0.3em 0;
     font-weight: bold;
   }
-
   ul {
-
     list-style-type: none;
     margin: 0;
     padding: 0;
-    
     li {
       font-size: 15px;
       line-height: 1.3;
       padding: 6px 0 6px 12px;
-      border-left: 2px solid #E3D6C0;
-
+      border-left: 2px solid $light-brown;
       &:hover {
-
-        border-left: 2px solid #002B36;
-
+        border-left: 2px solid $navy;
       }
-
       a {
         text-decoration: none;
         display: block;
       }
     }
   }
-  
   p {
-    margin: 0 0 0.5em;
-    color: darken(#C8BCA9, 40%);
+    margin: 0 0 0.5em 0;
   }
 }
