--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -41,6 +41,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://hotelpostalongarone.it/" target="_blank">http://hotelpostalongarone.it</a></li>
   <li><a href="http://happybeelab.com/" target="_blank">http://happybeelab.com</a></li>
   <li><a href="http://massgardinen.de/" target="_blank">http://massgardinen.de/</a></li>
+  <li><a href="http://v25media.com/" target="_blank">http://v25media.com/</a></li>
   <li><a href="http://thirteen23.com/" target="_blank">http://thirteen23.com</a></li>
   <li><a href="http://hypervers.es/" target="_blank">http://hypervers.es</a></li>
   <li><a href="http://matthieu-keller.info/" target="_blank">http://matthieu-keller.info</a></li>
@@ -62,6 +63,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://blog.troutwine.us/" target="_blank">http://blog.troutwine.us/</a></li>
   <li><a href="http://luebke-wohnen.de/" target="_blank">http://luebke-wohnen.de/</a></li> 
   <li><a href="http://benhollis.net" target="_blank">http://benhollis.net</a></li>
+  <li><a href="http://darrenknewton.com" target="_blank">http://darrenknewton.com</a></li>
   <li><a href="http://thirteen23.com/garage/" target="_blank">http://thirteen23.com/garage/</a></li>
 </ul>
 
