--- a/source/community/3rd-party-extensions.html.erb
+++ b/source/community/3rd-party-extensions.html.erb
@@ -39,6 +39,15 @@ title: "Community Extensions"
   </li>
 </ul>
 
+<h2>Paid Extensions</h2>
+
+<ul>
+  <li>
+    <a href="http://middleman-blog-editor.awardwinningfjords.com">Middleman Blog Editor</a>
+    &mdash; Blog management and <a href="http://en.wikipedia.org/wiki/WYSIWYG">WYSIWYG</a> posting.
+  </li>
+</ul>
+
 <footer>
   <%= link_to "Fork and add your extension on Github", "https://github.com/middleman/middleman-guides/blob/master/source/community-extensions.html.slim" %>
 </footer>
