--- a/source/_support.erb
+++ b/source/_support.erb
@@ -1,7 +1,7 @@
 <div id="support">
 	<div class="donate">
 	  <h4>Support This Project</h4>
-	  <p><a href="https://spb.io/s/4dXbHBorC3" target="_blank">With a Donation</a></p>
+	  <p><a href="https://spb.io/s/4dXbHBorC3" target="_blank" class="sbe-button">With a Donation</a></p>
 	</div>
 
   <!-- BuySellAds Zone Code -->
