--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -26,7 +26,7 @@
     <footer id="footer">
       <div class="container">
         <p class="copyright">
-          &copy; 2011 <a href="http://awardwinningfjords.com">Thomas Reynolds</a>.
+          &copy; 2011-2013 <a href="http://awardwinningfjords.com">Thomas Reynolds</a>.
         </p>
         <p class="link"><%= link_to "Fork and edit this guide on Github", edit_guide_url %></p>
       </div>
@@ -36,6 +36,8 @@
     <%= stylesheet_link_tag "solarized_light" %>
     <script>hljs.initHighlightingOnLoad();</script>
 
+
+    <script src='https://spacebox.io/embed/js/embed-v1.js'></script>
     <%= partial 'layouts/tracking' %>
   </body>
 </html>
