--- a/source/community/3rd-party-extensions.html.erb
+++ b/source/community/3rd-party-extensions.html.erb
@@ -49,5 +49,5 @@ title: "Community Extensions"
 </ul>
 
 <footer>
-  <%= link_to "Fork and add your extension on Github", "https://github.com/middleman/middleman-guides/blob/master/source/community-extensions.html.slim" %>
+  <%= link_to "Fork and add your extension on Github", "https://github.com/middleman/middleman-guides/blob/master/source/community-extensions.html.erb" %>
 </footer>
