Add middleman-blog-drafts to community extensions page

--- a/source/community/3rd-party-extensions.html.erb
+++ b/source/community/3rd-party-extensions.html.erb
@@ -37,6 +37,10 @@ title: "Community Extensions"
     <a href="https://github.com/yeah/middleman-svg-fallback">middleman-svg-fallback</a>
     &mdash; Generate nice JPEG and PNG files from any SVG files.
   </li>
+  <li>
+    <a href="https://github.com/fgrehm/middleman-blog-drafts">middleman-blog-drafts</a>
+    &mdash; An addon for middleman-blog that simplifies draft posts creation and publishing.
+  </li>
 </ul>
 
 <h2>Paid Extensions</h2>
