Target _blank these these external links

--- a/source/layouts/_nav.erb
+++ b/source/layouts/_nav.erb
@@ -32,7 +32,7 @@
       <li><a href="/community/3rd-party-extensions/">Community Extensions</a></li>
       <li><a href="/community/3rd-party-project-templates/">Community Project Templates</a></li>
       <li><a href="/community/built-using-middleman/">Sites Built Using Middleman</a></li>
-      <li><a href="http://forum.middlemanapp.com/">Community Forum</a></li>
-      <li><a href="https://github.com/middleman/middleman">GitHub Repository</a></li>
+      <li><a href="http://forum.middlemanapp.com/" target="_blank">Community Forum</a></li>
+      <li><a href="https://github.com/middleman/middleman" target="_blank">GitHub Repository</a></li>
   </ul>
 </div>
