Just the basics, but better then nothing

--- a/source/layouts/_nav.erb
+++ b/source/layouts/_nav.erb
@@ -9,6 +9,7 @@
       <li><a href="/asset-pipeline/">Asset Pipeline</a></li>
       <li><a href="/pretty-urls/">Pretty URLs (Directory Indexes)</a></li>
       <li><a href="/livereload/">LiveReload</a></li>
+      <li><a href="/minify-html/">Minify HTML</a></li>
       <li><a href="/blogging/">Blogging</a></li>
   </ul>
 </div>
