Add EuRuKo 2013 website to the list

--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -51,6 +51,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://www.heitzke.com/" target="_blank">http://www.heitzke.com</a></li>
   <li><a href="http://www.incubatebang.com/" target="_blank">http://www.incubatebang.com</a></li>
   <li><a href="http://www.cileos.com" target="_blank">http://www.cileos.com</a></li>
+  <li><a href="http://euruko2013.org" target="_blank">http://euruko2013.org</a></li>
 </ul>
 
 <h1>Mobile Apps Built Using Middleman</h1>
