Add link to middleman-zurb-template by mattolson

--- a/source/community/3rd-party-project-templates.html.erb
+++ b/source/community/3rd-party-project-templates.html.erb
@@ -23,7 +23,11 @@ title: "Community Project Templates"
   </li>
   <li>
     <a href="https://github.com/vocino/middleman-foundation">Middleman-Foundation</a>
-    &mdash; ZURB Foundation in Compass, SCSS & HAML.
+    &mdash; ZURB Foundation in Compass, SCSS &amp; HAML.
+  </li>
+  <li>
+    <a href="https://github.com/mattolson/middleman-zurb-template">middleman-zurb-template</a>
+    &mdash; Middleman blog template containing ZURB Foundation and sensible default components and templates
   </li>
 </ul>
 
