--- a/source/community/3rd-party-project-templates.html.erb
+++ b/source/community/3rd-party-project-templates.html.erb
@@ -29,6 +29,10 @@ title: "Community Project Templates"
     <a href="https://github.com/mattolson/middleman-zurb-template">middleman-zurb-template</a>
     &mdash; Middleman blog template containing ZURB Foundation and sensible default components and templates
   </li>
+  <li>
+    <a href="https://github.com/pixelsonly/middleman-phonegap">middleman-phonegap</a>
+    &mdash; Phonegap integration template with Haml, Sass, Coffeescript. Automatically compiles and emulates Phonegap application after build.
+  </li>
 </ul>
 
 <footer>
