--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -52,6 +52,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://www.incubatebang.com/" target="_blank">http://www.incubatebang.com</a></li>
   <li><a href="http://www.cileos.com" target="_blank">http://www.cileos.com</a></li>
   <li><a href="http://euruko2013.org" target="_blank">http://euruko2013.org</a></li>
+  <li><a href="http://kesseki.harahara.org" target="_blank">http://kesseki.harahara.org</a></li>
 </ul>
 
 <h1>Mobile Apps Built Using Middleman</h1>
